<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#ffffff">
	
	<TextView    
        android:id="@+id/reg_mess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:paddingBottom="25dip"
        android:text="@string/reg_mess"/>
        
	<TextView    
        android:id="@+id/firstnametext"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_mess"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/firstnametext"/>
    <TextView    
        android:id="@+id/firstnameok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/firstnametext"
        android:layout_alignBaseline="@id/firstnametext"
        android:text="*"/>
    <EditText
        android:id="@+id/firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/firstnameok"
        android:layout_alignBaseline="@id/firstnameok"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
    
        
    <TextView    
        android:id="@+id/lastnametext"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstnametext"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/lastnametext"/>
    <TextView    
        android:id="@+id/lastnameok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/lastnametext"
        android:layout_alignBaseline="@id/lastnametext"
        android:text="*"/>
    <EditText
        android:id="@+id/lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/lastnameok"
        android:layout_alignBaseline="@id/lastnameok"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
        
	<TextView    
        android:id="@+id/emailtext"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastnametext"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/emailtext"/>
    <TextView    
        android:id="@+id/emailok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/emailtext"
        android:layout_alignBaseline="@id/emailtext"
        android:text="*"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/emailok"
        android:layout_alignBaseline="@id/emailok"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
        
    <TextView    
        android:id="@+id/newusertext"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtext"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/newusertext"/>
    <TextView    
        android:id="@+id/newuserok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/newusertext"
        android:layout_alignBaseline="@id/newusertext"
        android:text="*"/>
    <EditText
        android:id="@+id/newuser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/newuserok"
        android:layout_alignBaseline="@id/newuserok"
        android:singleLine="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
        
    <TextView    
        android:id="@+id/newpwd1text"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newusertext"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/newpwd1text"/>
    <TextView    
        android:id="@+id/newpwd1ok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/newpwd1text"
        android:layout_alignBaseline="@id/newpwd1text"
        android:text="*"/>
    <EditText
        android:id="@+id/newpwd1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/newpwd1ok"
        android:layout_alignBaseline="@id/newpwd1ok"
        android:singleLine="true"
        android:password="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
        
    <TextView    
        android:id="@+id/newpwd2text"
        android:layout_width="75dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpwd1text"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/newpwd2text"/>
    <TextView    
        android:id="@+id/newpwd2ok"
        android:layout_width="8dip"
        android:layout_height="wrap_content"
        android:layout_marginRight="2dip"
        android:layout_toRightOf="@id/newpwd2text"
        android:layout_alignBaseline="@id/newpwd2text"
        android:text="*"/>
    <EditText
        android:id="@+id/newpwd2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dip"
        android:layout_toRightOf="@id/newpwd2ok"
        android:layout_alignBaseline="@id/newpwd2ok"
        android:singleLine="true"
        android:password="true"
        android:maxLines="1"
        android:background="@android:drawable/editbox_background"/>
        
    <TextView    
        android:id="@+id/submit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newpwd2text"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:text="@string/submit_message"/>
  
    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_message"
        android:layout_marginTop="15dip"
        android:layout_alignParentLeft="true"
        android:text="@string/submit_button"/>
	
	<Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_message"
        android:layout_marginTop="15dip"
        android:text="@string/cancel_button"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
